# ASAPP-hackathon

./: .env.example  .gitignore  AIRLINE_SERVICE_RUNBOOK.md  AUTOMATIC_DATA_RETRIEVAL_IMPLEMENTATION.md  Dockerfile  MAIN_QUERY_ENDPOINT_IMPLEMENTATION.md  PROJECT_PRESENTATION_GUIDE.md  QUICKSTART.md  README.md  TECHNICAL_CHEAT_SHEET.md  api_test_calls.md  debug_scraper.py  docker-compose.yml  interactive_test.py  pyproject.toml  pytest.ini  quick_test.sh  requirements.txt  run_server.py  simple_server.py  start_server.sh  test_all_apis.py  test_api.py  test_policy_debug.py  test_policy_scraping.py  test_policy_simple.py  test_system.py
.kiro/specs/airline-customer-service/: design.md  requirements.md  tasks.md
scripts/: analyze_dataset.py  demo_task_handlers.py  enhanced_dataset_generator.py  final_dataset_generator.py  generate_dataset.py  run_classifier_tests.py  simple_dataset_generator.py  simple_test_classifier.py  standalone_classifier.py  standalone_entity_extractor.py  test_airline_api_client.py  test_classifier_integration.py  test_improved_extractor.py  train_distilbert.py  train_entity_extractor.py  train_simple_classifier.py
src/airline_service/: __init__.py  config.py  container.py  error_handlers.py  main.py  types.py
src/airline_service/api/: __init__.py  monitoring_endpoints.py
src/airline_service/clients/: __init__.py  airline_api_client.py
tests/: test_audit_logger.py  test_automatic_data_retrieval.py  test_cache_service.py  test_connection_pool.py  test_dataset_generator.py  test_main.py  test_main_endpoint.py  test_metrics_collector.py  test_performance_monitor.py  test_performance_monitoring.py  test_request_classifier.py  test_response_formatter.py  test_task_engine.py  test_validators.py  test_workflow_orchestrator.py
(+34 files in other folders)
